fixed width on mobile menu to include codepen icon

--- a/css/menu.css
+++ b/css/menu.css
@@ -114,7 +114,7 @@ text-decoration:none;
 
 #mobileMenu ul.socialIconsMenu{
 
-width:270px;
+width:313px;
 margin:0 auto;
 
 }
